--- a/02-build_package.Rmd
+++ b/02-build_package.Rmd
@@ -150,7 +150,7 @@ For the moment, the package exists only in the environment associated with the *
 
 To do this, click on "Install" (`Ctrl+Shift+B`) from the "Build" tab, or alternatively you can run `devtools::install()`.
 
-And finally, you can configure *RStudio*'s behavior so that at the time of installation, it simultaneously documents the package: go to the "More" menu from the "Build" tab, then "Configure Build Tools...". Then click on "Configure" next to "Generate documentation with Roxygen", and check the box "Install and Restart".
+And finally, you can configure *RStudio*'s behavior so that at the time of installation, it simultaneously documents the package: go to the "More" menu from the "Build" tab, then "Configure Build Tools...". Then click on "Configure" next to "Generate documentation with Roxygen", and check the box "Install and Restart" (if it is not already ticked).
 
 
 ## Automatically test your package
