--- a/06-Rcpp.Rmd
+++ b/06-Rcpp.Rmd
@@ -9,7 +9,7 @@ library(ggplot2)
 
 `Rcpp` ("*R-C-Plus-Plus*") is a package which facilitates the interface between `C++` and `r fontawesome::fa("r-project")`. `r fontawesome::fa("r-project")` is an interpreted language, a feature that makes a number of things easy (including giving us access to the console in which we can evaluate code and variables on the fly). Nevertheless, this ease of use is counterbalanced by larger computation times compared to lower level languages such as `C`, `Fortran` and `C++` (but which require compilation).
 
-The curious reader is directed towards the online book [*Rcpp for everyone*](https://teuder.github.io/rcpp4everyone_en/) by Masaki E. Tsuda, which is a very thorough and complete resource for understanding how to use `Rcpp`, in complement to the introduction that can be found in the "Rcpp" section of Hadley Wickham's book [*Advanced R*](https://adv-r.hadley.nz/Rcpp.html)[^2].
+The curious reader is directed towards the online book [*Rcpp for everyone*](https://teuder.github.io/rcpp4everyone_en/) by Masaki E. Tsuda, which is a very thorough and complete resource for understanding how to use `Rcpp`, in complement to the introduction that can be found in the "Rcpp" section of Hadley Wickham's book [*Advanced R*](https://adv-r.hadley.nz/rcpp.html)[^2].
 
 [^2]: *Advanced R* (2^nd^ Edition) by Hadley Wickham. The R series, CRC press, 2019. ISBN: 9780815384571 [https://adv-r.hadley.nz/](https://adv-r.hadley.nz/)
 
@@ -45,7 +45,7 @@ We are now going to create a first function in `Rcpp` to invert a matrix. For th
 > 1. Create a new `C++` file from *RStudio* (via the `File` > `New File` > `C++ File` menu), and save it in the `src` folder. Take the time to read it and try to understand each line.
 > 2. Compile and load your package (via the "Install and Restart" button) and try using the `timesTwo()` function from the console.
 > 3. Install the `RcppArmadillo` `r emoji::emoji("point_right")` package, and don't forget to make the necessary additions to `DESCRIPTION` (use `usethis::use_rcpp_armadillo()`)
-> 4. Using Hadley Wickham's [introduction to `Rcpp`](https://adv-r.hadley.nz/Rcpp.html#rcpp-intro) in his book *Advanced R*, as well as the documentation for the [`RcppArmadillo` package](https://gallery.rcpp.org/articles/armadillo-eigenvalues/) and for the `C++` library [Armadillo](https://arma.sourceforge.net/docs.html), try to write a short function `invC()` in `C++` that computes the inverse of a matrix.
+> 4. Using Hadley Wickham's [introduction to `Rcpp`](https://adv-r.hadley.nz/rcpp.html#rcpp-intro) in his book *Advanced R*, as well as the documentation for the [`RcppArmadillo` package](https://gallery.rcpp.org/articles/armadillo-eigenvalues/) and for the `C++` library [Armadillo](https://arma.sourceforge.net/docs.html), try to write a short function `invC()` in `C++` that computes the inverse of a matrix.
 > 5. When you have successfully compiled your `invC` function and it is accessible from `r fontawesome::fa("r-project")`, create a `mvnpdf_invC()` function from the `mvnpdfsmart` implementation replacing only the matrix inverse calculations with a call to `invC`.
 > 6. Evaluate the performance gain of this new implementation `mvnpdf_invC`.
 
@@ -60,7 +60,7 @@ mb <- microbenchmark(mvtnorm::dmvnorm(matrix(1.96, nrow = n, ncol = 2)),
 mb
 ```
 
-```{r, echo=FALSE, eval =TRUE}
+```{r, echo=FALSE, eval=TRUE}
 data2plot <- cbind.data.frame("Time" = mb$time/10^6, "Expression" = mb$expr)
 levels(data2plot$Expression) <- gsub("mvtnorm::", "", sapply(strsplit(levels(data2plot$Expression), "(", fixed=T), "[", 1))
 ggplot(data2plot) + geom_violin(aes(x=Expression, y=Time, fill=Expression), alpha=0.8)  +
